--- a/webtools/bugzilla/template/en/default/admin/custom_fields/create.html.tmpl
+++ b/webtools/bugzilla/template/en/default/admin/custom_fields/create.html.tmpl
@@ -93,7 +93,7 @@
     <tr>
       <th align="right"><label for="sortkey">Sortkey:</label></th>
       <td>
-        <input type="text" id="sortkey" name="sortkey" value="0" size="6" maxlength="6">
+        <input type="text" id="sortkey" name="sortkey" size="6" maxlength="6">
       </td>
 
       <th>&nbsp;</th>
