b=355548 - display regression bug ID in simple view of testcase
b=355459
- display enabled/community enabled status in simple testcase view for admin users

b=359744
- display testcases in testcase/subgroup sort order when printing

b=360621
- validate view testcase forms prior to submission

Misc.
- use JSON filters to limit view testcase results
- add enabled toggle for entity form widgets where appropriate

--- a/webtools/litmus/templates/en/default/form_widgets/select_testgroup_id.tmpl
+++ b/webtools/litmus/templates/en/default/form_widgets/select_testgroup_id.tmpl
@@ -1,4 +1,4 @@
-<select class="testgroup" id="[% name %]" name="[% name %]"[% IF size %] size="[% size %]"[% END %][% IF onchange %] onChange="[% onchange %]"[% END %][% IF disabled %] disabled[% END %]>
+<select class="testgroup" id="[% name %]" name="[% name %]"[% IF size %] size="[% size %]"[% END %][% IF onChange %] onChange="[% onChange %]"[% END %][% IF disabled %] disabled[% END %]>
     [% IF placeholder %]<option value="">-Testgroup-</option>[% END %]
 [% IF testgroups %]
 [% FOREACH testgroup=testgroups %]
