--- a/webtools/litmus/templates/en/default/show/show.html.tmpl
+++ b/webtools/litmus/templates/en/default/show/show.html.tmpl
@@ -43,7 +43,7 @@
 
 [% includeselects=1 %]
 
-[% INCLUDE global/html_header.tmpl js_files=['js/prototype.lite.js','js/moo.fx.js','js/moo.fx.pack.js','js/EditTests.js','js/FormValidation.js','js/SelectBoxes.js'] %] 
+[% INCLUDE global/html_header.tmpl js_files=['js/prototype.lite.js','js/moo.fx.js','js/moo.fx.pack.js','js/EditTests.js','js/FormValidation.js','js/SelectBoxes.js','js/ManageTestcases.js'] %] 
 [% INCLUDE global/litmus_header.tmpl %]
 
 <div id="page">
