--- a/webtools/litmus/templates/en/default/show/search_for_testcases.tmpl
+++ b/webtools/litmus/templates/en/default/show/search_for_testcases.tmpl
@@ -36,16 +36,34 @@
 [% PROCESS global/selects.none.tmpl %]
 
 [% includeselects=1 %] 
-[% INCLUDE global/html_header.tmpl js_files=['js/Help.js','js/SelectBoxes.js'] %]
+[% INCLUDE global/html_header.tmpl js_files=['js/Help.js','js/SelectBoxes.js','js/FormValidation.js','js/FormPersist.js','js/ViewTestcase.js'] %]
 [% INCLUDE global/litmus_header.tmpl %]
 
 <script type="text/javascript">
-function init()
-{
-	FormInit(document.forms['testcase_search_by_category'], document.location.search);
-    FormInit(document.forms['testcase_search_by_id'], document.location.search);
-    FormInit(document.forms['testcase_fulltext_search'], document.location.search);
-    FormInit(document.forms['testcase_search_recent'], document.location.search);
+var products=[% products_js %];
+var testgroups=[% testgroups_js %];
+var subgroups=[% subgroups_js %];
+
+function init() {
+  populateProductSelect("product_id");
+[% IF searchType == "by_category" %]
+  productBox = document.getElementById('product_id');
+  testgroupBox = document.getElementById('testgroup_id');
+  FormInit(document.forms['testcase_search_by_category'], document.location.search);
+  changeProduct(productBox);
+  FormInit(document.forms['testcase_search_by_category'], document.location.search);
+  changeTestgroup(testgroupBox);
+  FormInit(document.forms['testcase_search_by_category'], document.location.search);
+[% END %]
+[% IF searchType == "by_id" %]
+  FormInit(document.forms['testcase_search_by_id'], document.location.search);
+[% END %]
+[% IF searchType == "fulltext" %]
+  FormInit(document.forms['testcase_fulltext_search'], document.location.search);
+[% END %]
+[% IF searchType == "recent" %]
+  FormInit(document.forms['testcase_search_recent'], document.location.search);
+[% END %]
 }
 
 var relevanceHelpTitle = 'What is relevance?';
@@ -68,30 +86,35 @@ var relevanceHelpText = '<p>Relevance values are non-negative floating-point num
         <th>By category</th>
       </tr>
       <tr>
-         <td valign="top" width="100%">
-         <div class="testcase-search">
-         <form action="show_test.cgi" method="get" name="testcase_search_by_category" 
-         							  id="testcase_search_by_category">
-		  <input type="hidden" name="type" value="by_category"/>
-		  <table border="0">
-			<tr>
-			  <td>Product:</td>
-			  <td>Testgroup:</td>
-			  <td>Subgroup:</td>
-			</tr>
-			<tr>
-			  <td>
-				[% INCLUDE productbox onchange="changeProduct();" %]
-			  </td>
-			  <td>
-				[% INCLUDE testgroupbox onchange="changeTestgroup();" %]
-			  </td>
-			  <td>
-				[% INCLUDE subgroupbox onchange="" %]
-			  </td>
-			</tr>
-		  </table>
+        <td valign="top" width="100%">
+          <div class="testcase-search">
+            <form action="show_test.cgi" 
+                  method="get" 
+                  name="testcase_search_by_category" 
+                  id="testcase_search_by_category" 
+                  onSubmit="return checkCategoryForm(this);">
+              <input type="hidden" id="searchType" name="searchType" value="by_category"/>
+	      <table border="0">
+                <tr>
+		  <td>Product:</td>
+		  <td>Testgroup:</td>
+	          <td>Subgroup:</td>
+		</tr>
+		<tr>
+		  <td>
+                    [% INCLUDE form_widgets/select_product_id.tmpl name="product_id" placeholder=1 onChange="changeProduct(this);" %]
+                  </td>
+	          <td>
+                    [% INCLUDE form_widgets/select_testgroup_id.tmpl name="testgroup_id" placeholder=1 onChange="changeTestgroup(this);" %]
+                  </td>
+                  <td>
+                    [% INCLUDE form_widgets/select_subgroup_id.tmpl name="subgroup_id" placeholder=1 %]
+                  </td>
+                </tr>
+              </table>
+
          <input class="button" type="submit" value="Search By Category">
+
          </form></div></td>
       </tr>
       </table>
@@ -103,10 +126,12 @@ var relevanceHelpText = '<p>Relevance values are non-negative floating-point num
       <th>By Recently Added/Changed</th>
       </tr>
       <tr>
-      <td valign="top" width="33%"><div class="testcase-search">Testcase ID#:<br/><form action="show_test.cgi" method="get" name="testcase_search_by_id" id="testcase_search_by_id"><input type="text" id="id" name="id" size="25" /><br/><input class="button" type="submit" value="Search By ID"></form></td></div></td>
-      <td valign="top" width="33%"><div class="testcase-search">String to match:<br/><form action="show_test.cgi" method="get" name="testcase_fulltext_search" id="testcase_fulltext_search"><input type="text" id="text_snippet" name="text_snippet" size="25" /><br/>Minimum Relevance Score:<br/><input type="text" name="relevance_threshold" id="relevance_threshold" value="[% default_relevance_threshold %]" size="5" />&nbsp;&lArr;&nbsp;<a name="relevance_help" onclick="toggleHelp(relevanceHelpTitle,relevanceHelpText);">What is relevance?</a><br/># of Matches:<br/><input type="text" name="match_limit" id="match_limit" value="[% default_match_limit %]" size="5" /><br/><input class="button" type="submit" value="Fulltext Search"></form>
+      <td valign="top" width="33%"><div class="testcase-search">Testcase ID#:<br/><form action="show_test.cgi" method="get" name="testcase_search_by_id" id="testcase_search_by_id" onSubmit="return checkIDForm(this);"><input type="hidden" id="searchType" name="searchType" value="by_id"/>
+<input type="text" id="id" name="id" size="25" /><br/><input class="button" type="submit" value="Search By ID"></form></td></div></td>
+      <td valign="top" width="33%"><div class="testcase-search">String to match:<br/><form action="show_test.cgi" method="get" name="testcase_fulltext_search" id="testcase_fulltext_search" onSubmit="return checkFulltextForm(this);"><input type="hidden" id="searchType" name="searchType" value="fulltext"/>
+<input type="text" id="text_snippet" name="text_snippet" size="25" /><br/>Minimum Relevance Score:<br/><input type="text" name="relevance_threshold" id="relevance_threshold" value="[% default_relevance_threshold %]" size="5" />&nbsp;&lArr;&nbsp;<a name="relevance_help" onclick="toggleHelp(relevanceHelpTitle,relevanceHelpText);">What is relevance?</a><br/># of Matches:<br/><input type="text" name="match_limit" id="match_limit" value="[% default_match_limit %]" size="5" /><br/><input class="button" type="submit" value="Fulltext Search"></form>
 </div></td>
-      <td valign="top"><div class="testcase-search"><form action="show_test.cgi" method="get" name="testcase_search_recent" id="testcase_search_recent"><input type="radio" id="recently" name="recently" value="added" checked/>&nbsp;Added<br/><input type="radio" id="recently" name="recently" value="changed" />&nbsp;Changed<br/>Within the last <input type="text" name="num_days" value="[% default_num_days %]" size="3"> days<br/># of Matches:<br/><input type="text" name="match_limit" id="match_limit" value="[% default_match_limit %]" size="5" /><br/><input class="button" type="submit" value="Search Recent"></div></td>
+      <td valign="top"><div class="testcase-search"><form action="show_test.cgi" method="get" name="testcase_search_recent" id="testcase_search_recent" onSubmit="return checkRecentForm(this);"><input type="hidden" id="searchType" name="searchType" value="recent"/><input type="radio" id="recently" name="recently" value="added" checked/>&nbsp;Added<br/><input type="radio" id="recently" name="recently" value="changed" />&nbsp;Changed<br/>Within the last <input type="text" name="num_days" value="[% default_num_days %]" size="3"> days<br/># of Matches:<br/><input type="text" name="match_limit" id="match_limit" value="[% default_match_limit %]" size="5" /><br/><input class="button" type="submit" value="Search Recent"></div></td>
       </tr>
 
     </table>
