Synching with revision 2385

--- a/webtools/testopia/template/en/default/testopia/case/history.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/history.html.tmpl
@@ -96,6 +96,18 @@
 </table>
 
 <div id="diff">
+  <br>SETUP<hr>
+  <div id="case_setup">
+  <pre>
+    [% diff.setup %]
+  </pre>
+  </div>
+  <br>BREAKDOWN<hr>
+  <div id="case_breakdown">
+  <pre>
+    [% diff.breakdown %]
+  </pre>
+  </div>
   <br>ACTION<hr>
   <div id="case_action">
   <pre>
