--- a/webtools/testopia/template/en/default/testopia/environment/admin/tree.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/environment/admin/tree.html.tmpl
@@ -100,7 +100,7 @@
         if (selectedNode.actionIsDisabled(selectedNode.actions.REMOVE)) {
             return false;
         }
-        var action = confirm("You are about to delete this item with all it's children. Continue?");
+        var action = confirm("You are about to delete this item with all its children. Continue?");
         this.controller = dojo.widget.manager.getWidgetById(controllerId);
 
         if (action){
