--- a/webtools/testopia/template/en/default/testopia/environment/show.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/environment/show.html.tmpl
@@ -110,7 +110,7 @@
         if (selectedNode.actionIsDisabled(selectedNode.actions.REMOVE)) {
             return false;
         }
-        var action = confirm("You are about to remove this item with all it's children from the selected environemnt. Continue?");
+        var action = confirm("You are about to remove this item with all its children from the selected environment. Continue?");
         this.controller = dojo.widget.manager.getWidgetById(controllerId);
 
         if (action){
