Submit button doesn't work when changing the name of a category

--- a/webtools/testopia/template/en/default/testopia/environment/admin/category.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/environment/admin/category.html.tmpl
@@ -46,5 +46,5 @@
   
   <br />
   
-  <input name="submit" type="button" value="Submit">
+  <input name="submit" type="submit" value="Submit">
 </form>
