- fix editing of testgroups

--- a/webtools/litmus/templates/en/default/admin/manage_testgroups.tmpl
+++ b/webtools/litmus/templates/en/default/admin/manage_testgroups.tmpl
@@ -68,7 +68,7 @@ var current_user_id=[% user.user_id %];
 	<table border="0" cellspacing="0" cellpadding="5">
 	<tr>
         <td>
-	[% INCLUDE form_widgets/select_testgroup_id.tmpl name="testgroup_id" placeholder=1 size=10 onchange="loadTestgroup();" %]
+	[% INCLUDE form_widgets/select_testgroup_id.tmpl name="testgroup_id" placeholder=1 size=10 onChange="loadTestgroup();" %]
         </td>
         </tr>
         <tr>        
