--- a/webtools/bugzilla/template/en/default/bug/create/create.html.tmpl
+++ b/webtools/bugzilla/template/en/default/bug/create/create.html.tmpl
@@ -465,6 +465,7 @@ function handleWantsAttachment(wants_attachment) {
           <table class="attachment_entry">
             [% PROCESS attachment/createformcontents.html.tmpl
                        flag_types = product.flag_types.attachment
+                       any_flags_requesteeble = 1
                        flag_table_id ="attachment_flags" %]
           </table>
         </fieldset>
