Deleting large test plans caused timeouts. Use sever push to keep alive.

--- a/webtools/testopia/template/en/default/testopia/plan/delete.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/plan/delete.html.tmpl
@@ -34,7 +34,7 @@
 [%############################################################################%]
 
 [% PROCESS global/header.html.tmpl 
-  title = "Delete Test plan: $plan.name" 
+  title = "Delete Test plan $plan.name" 
 %] 
 
 [% IF NOT deleted %]
