--- a/webtools/testopia/template/en/default/testopia/run/delete.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/run/delete.html.tmpl
@@ -34,7 +34,7 @@
 [%############################################################################%]
 
 [% PROCESS global/header.html.tmpl 
-  title = "Delete Test Run: $run.summary" 
+  title = "Delete Test Run $run.summary" 
 %] 
 
 [% IF NOT deleted %]
