--- a/webtools/testopia/template/en/default/testopia/case/delete.html.tmpl
+++ b/webtools/testopia/template/en/default/testopia/case/delete.html.tmpl
@@ -34,7 +34,7 @@
 [%############################################################################%]
 
 [% PROCESS global/header.html.tmpl 
-  title = "Delete Test Case: $case.summary" 
+  title = "Delete Test Case $case.summary" 
 %] 
 
 [% IF NOT deleted %]
